--- a/Accordion/index.html
+++ b/Accordion/index.html
@@ -29,8 +29,76 @@
 	<body>
 		<div class="accordion">
 			<div class="item">
+				<p class="number">01</p>
+				<p class="text">Whera are these chairs assembled?</p>
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					fill="none"
+					viewBox="0 0 24 24"
+					stroke-width="1.5"
+					stroke="currentColor"
+					class="icon"
+				>
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						d="M19.5 8.25l-7.5 7.5-7.5-7.5"
+					/>
+				</svg>
+				<div class="hidden-box">
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing
+						elit. Neque, laudantium tempora ratione incidunt
+						officiis itaque assumenda deserunt accusamus explicabo
+						corporis, ipsum vel ut exercitationem repellendus nam
+						quos alias eius? Hic.
+					</p>
+					<ul>
+						<li>Lorem, ipsum dolor sit amet consectetur.</li>
+						<li>Repellendus, necessitatibus sapiente.</li>
+						<li>Eligendi rerum, laudantium eum provident.</li>
+						<li>Repellendus quibusdam accusantium asperiores.</li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="item open">
 				<p class="number">02</p>
 				<p class="text">How long do I have to return may chair?</p>
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					fill="none"
+					viewBox="0 0 24 24"
+					stroke-width="1.5"
+					stroke="currentColor"
+					class="icon"
+				>
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						d="M19.5 8.25l-7.5 7.5-7.5-7.5"
+					/>
+				</svg>
+				<div class="hidden-box">
+					<p>
+						Lorem ipsum dolor, sit amet consectetur adipisicing
+						elit. Neque, laudantium tempora ratione incidunt
+						officiis itaque assumenda deserunt accusamus explicabo
+						corporis, ipsum vel ut exercitationem repellendus nam
+						quos alias eius? Hic.
+					</p>
+					<ul>
+						<li>Lorem, ipsum dolor sit amet consectetur.</li>
+						<li>Repellendus, necessitatibus sapiente.</li>
+						<li>Eligendi rerum, laudantium eum provident.</li>
+						<li>Repellendus quibusdam accusantium asperiores.</li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="item">
+				<p class="number">03</p>
+				<p class="text">Do you ship to countries outside the EU?</p>
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					fill="none"
