--- a/Carousel/index.html
+++ b/Carousel/index.html
@@ -6,7 +6,77 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="style.css"
+		/>
 		<title>Carousel component</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="carousel">
+			<img
+				src="./img/maria.jpg"
+				alt="Customer photo"
+			/>
+			<blockquote lass="testimonial">
+				<p class="testimonial-text">
+					"Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Saepe molestiae, esse earum accusantium error minus quaerat
+					labore dolores harum iste reiciendis nobis ratione
+					perspiciatis quidem praesentium mollitia alias voluptatibus
+					ipsum?""
+				</p>
+				<p class="testimonial-author">Maria de Almeida</p>
+				<p class="testimonial-job">
+					Senior Product Manager at EDP Comercial
+				</p>
+			</blockquote>
+
+			<button class="btn">
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					fill="none"
+					viewBox="0 0 24 24"
+					stroke-width="1.5"
+					stroke="currentColor"
+					class="btn-icon"
+				>
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						d="M15.75 19.5L8.25 12l7.5-7.5"
+					/>
+				</svg>
+			</button>
+			<button class="btn">
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					fill="none"
+					viewBox="0 0 24 24"
+					stroke-width="1.5"
+					stroke="currentColor"
+					class="btn-icon"
+				>
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						d="M8.25 4.5l7.5 7.5-7.5 7.5"
+					/>
+				</svg>
+			</button>
+		</div>
+	</body>
 </html>
