--- a/Carousel/index.html
+++ b/Carousel/index.html
@@ -31,7 +31,7 @@
 				src="./img/maria.jpg"
 				alt="Customer photo"
 			/>
-			<blockquote lass="testimonial">
+			<blockquote class="testimonial">
 				<p class="testimonial-text">
 					"Lorem ipsum dolor sit, amet consectetur adipisicing elit.
 					Saepe molestiae, esse earum accusantium error minus quaerat
