--- a/Carousel/index.html
+++ b/Carousel/index.html
@@ -35,9 +35,7 @@
 				<p class="testimonial-text">
 					"Lorem ipsum dolor sit, amet consectetur adipisicing elit.
 					Saepe molestiae, esse earum accusantium error minus quaerat
-					labore dolores harum iste reiciendis nobis ratione
-					perspiciatis quidem praesentium mollitia alias voluptatibus
-					ipsum?""
+					labore dolores harum iste reiciendis."
 				</p>
 				<p class="testimonial-author">Maria de Almeida</p>
 				<p class="testimonial-job">
@@ -45,7 +43,7 @@
 				</p>
 			</blockquote>
 
-			<button class="btn">
+			<button class="btn btn--left">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					fill="none"
@@ -61,7 +59,7 @@
 					/>
 				</svg>
 			</button>
-			<button class="btn">
+			<button class="btn btn--right">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					fill="none"
@@ -77,6 +75,12 @@
 					/>
 				</svg>
 			</button>
+			<div class="dots">
+				<button class="dot dot--fill">&nbsp;</button>
+				<button class="dot">&nbsp;</button>
+				<button class="dot">&nbsp;</button>
+				<button class="dot">&nbsp;</button>
+			</div>
 		</div>
 	</body>
 </html>
