--- a/Pagination/index.html
+++ b/Pagination/index.html
@@ -27,7 +27,7 @@
 	</head>
 	<body>
 		<div class="pagination">
-			<button class="btn btn-left">
+			<button class="btn btn--left">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					fill="none"
@@ -49,9 +49,9 @@
 			<p class="page">4</p>
 			<p class="page">5</p>
 			<p class="page">6</p>
-			<p>....</p>
+			<p>...</p>
 			<p class="page">23</p>
-			<button class="btn btn-right">
+			<button class="btn btn--right">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					fill="none"
