--- a/Pagination/index.html
+++ b/Pagination/index.html
@@ -27,7 +27,7 @@
 	</head>
 	<body>
 		<div class="pagination">
-			<button class="btn btn--left">
+			<button class="btn btn-left">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					fill="none"
@@ -43,14 +43,46 @@
 					/>
 				</svg>
 			</button>
-			<p class="page">1</p>
-			<p class="page">2</p>
-			<p class="page">3</p>
-			<p class="page">4</p>
-			<p class="page">5</p>
-			<p class="page">6</p>
-			<p>...</p>
-			<p class="page">23</p>
+			<a
+				href="#"
+				class="page"
+				>1</a
+			>
+			<a
+				href="#"
+				class="page"
+				>2</a
+			>
+			<a
+				href="#"
+				class="page"
+				>3</a
+			>
+			<a
+				href="#"
+				class="page"
+				>4</a
+			>
+			<a
+				href="#"
+				class="page"
+				>5</a
+			>
+			<a
+				href="#"
+				class="page"
+				>6</a
+			>
+			<a
+				href="#"
+				class="page"
+				>...</a
+			>
+			<a
+				href="#"
+				class="page"
+				>23</a
+			>
 			<button class="btn btn--right">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
