--- a/Pagination/index.html
+++ b/Pagination/index.html
@@ -55,7 +55,7 @@
 			>
 			<a
 				href="#"
-				class="page"
+				class="page active"
 				>3</a
 			>
 			<a
@@ -75,7 +75,7 @@
 			>
 			<a
 				href="#"
-				class="page"
+				class="page--dots"
 				>...</a
 			>
 			<a
