--- a/Pagination/index.html
+++ b/Pagination/index.html
@@ -27,7 +27,7 @@
 	</head>
 	<body>
 		<div class="pagination">
-			<button class="btn btn-left">
+			<button class="btn">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					fill="none"
@@ -55,7 +55,7 @@
 			>
 			<a
 				href="#"
-				class="page active"
+				class="page page--active"
 				>3</a
 			>
 			<a
@@ -73,17 +73,13 @@
 				class="page"
 				>6</a
 			>
-			<a
-				href="#"
-				class="page--dots"
-				>...</a
-			>
+			<span class="page--dots">...</span>
 			<a
 				href="#"
 				class="page"
 				>23</a
 			>
-			<button class="btn btn--right">
+			<button class="btn">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					fill="none"
