--- a/Hero section/index.html
+++ b/Hero section/index.html
@@ -7,25 +7,10 @@
 			content="width=device-width, initial-scale=1.0"
 		/>
 		<link
-			rel="preconnect"
-			href="https://fonts.googleapis.com"
-		/>
-		<link
-			rel="preconnect"
-			href="https://fonts.gstatic.com"
-			crossorigin
-		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
-			rel="stylesheet"
-		/>
-		<link
 			rel="stylesheet"
 			href="style.css"
 		/>
-		<title>Hero section</title>
+		<title>Omnifood hero section</title>
 	</head>
-	<body>
-		TEST
-	</body>
+	<body></body>
 </html>
