--- a/Hero section/index.html
+++ b/Hero section/index.html
@@ -12,5 +12,41 @@
 		/>
 		<title>Omnifood hero section</title>
 	</head>
-	<body></body>
+	<body>
+		<header>
+			<nav>
+				<div>LOGO</div>
+				<div>NAVIGATION</div>
+			</nav>
+			<div>
+				<h1>A healthy meal deliverd to your door, every day</h1>
+				<p>
+					The smart 365-days-per-year food subscription that will make
+					you eat healthy again. Tailord to your personal tastes and
+					nutritional
+				</p>
+				<a
+					href="#"
+					class="btn"
+					>Start eating well</a
+				>
+			</div>
+		</header>
+
+		<section>
+			<div>
+				<h2>Some random heading</h2>
+				<p>
+					Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+					Explicabo maiores rerum illum inventore architecto pariatur
+					debitis deserunt sequi ex, corrupti aliquam, impedit et qui
+					expedita ratione aspernatur voluptatem hic rem! Lorem ipsum
+					dolor sit amet consectetur, adipisicing elit. Deserunt
+					pariatur incidunt voluptate, expedita tempora nihil a
+					cupiditate earum nulla eligendi accusamus aut neque totam
+					quos ab assumenda velit sapiente dolorum?
+				</p>
+			</div>
+		</section>
+	</body>
 </html>
