--- a/Hero section/index.html
+++ b/Hero section/index.html
@@ -7,6 +7,19 @@
 			content="width=device-width, initial-scale=1.0"
 		/>
 		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Rubik:wght@400;500;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link
 			rel="stylesheet"
 			href="style.css"
 		/>
@@ -14,11 +27,11 @@
 	</head>
 	<body>
 		<header>
-			<nav>
+			<nav class="container">
 				<div>LOGO</div>
 				<div>NAVIGATION</div>
 			</nav>
-			<div>
+			<div class="container">
 				<h1>A healthy meal deliverd to your door, every day</h1>
 				<p>
 					The smart 365-days-per-year food subscription that will make
@@ -34,7 +47,7 @@
 		</header>
 
 		<section>
-			<div>
+			<div class="container">
 				<h2>Some random heading</h2>
 				<p>
 					Lorem ipsum dolor sit amet consectetur, adipisicing elit.
