--- a/Hero section/index.html
+++ b/Hero section/index.html
@@ -31,18 +31,22 @@
 				<div>LOGO</div>
 				<div>NAVIGATION</div>
 			</nav>
-			<div class="container">
-				<h1>A healthy meal deliverd to your door, every day</h1>
-				<p>
-					The smart 365-days-per-year food subscription that will make
-					you eat healthy again. Tailord to your personal tastes and
-					nutritional
-				</p>
-				<a
-					href="#"
-					class="btn"
-					>Start eating well</a
-				>
+			<div class="header-container">
+				<div class="header-container-inner">
+					<h1>
+						A healthy meal deliverd to your door, every single day
+					</h1>
+					<p>
+						The smart 365-days-per-year food subscription that will
+						make you eat healthy again. Tailord to your personal
+						tastes and nutritional
+					</p>
+					<a
+						href="#"
+						class="btn"
+						>Start eating well</a
+					>
+				</div>
 			</div>
 		</header>
 
