--- a/Basic app layout/index.html
+++ b/Basic app layout/index.html
@@ -6,7 +6,17 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
+		<link
+			rel="stylesheet"
+			href="style.css"
+		/>
 		<title>App layout</title>
 	</head>
-	<body></body>
+	<body>
+		<nav>NAV</nav>
+		<menu>MENU</menu>
+		<section>INBOX</section>
+		<main>EMAIL</main>
+		<aside>ADDITIONAL INFO</aside>
+	</body>
 </html>
