--- a/Basic app layout/index.html
+++ b/Basic app layout/index.html
@@ -14,8 +14,25 @@
 	</head>
 	<body>
 		<nav>NAV</nav>
-		<menu>MENU</menu>
-		<section>INBOX</section>
+		<menu>
+			<button>New</button>
+			<button>Reply</button>
+			<button>Forward</button>
+			<button>Mark as unread</button>
+			<button>Trash</button>
+		</menu>
+		<section>
+			<div class="email">Email 1</div>
+			<div class="email">Email 2</div>
+			<div class="email">Email 3</div>
+			<div class="email">Email 4</div>
+			<div class="email">Email 5</div>
+			<div class="email">Email 6</div>
+			<div class="email">Email 7</div>
+			<div class="email">Email 8</div>
+			<div class="email">Email 9</div>
+			<div class="email">Email 10</div>
+		</section>
 		<main>EMAIL</main>
 		<aside>ADDITIONAL INFO</aside>
 	</body>
